# hydra

./: .gitignore  CHANGELOG.md  cabal.project  fourmolu.yaml
.github/workflows/: ci-cabal.yaml
docs/adr/: 2023-04-20_003-resource-based-api.md
head-protocol/: 404.html  index.html  sitemap.xml
head-protocol/adr/: atom.xml  index.html  rss.xml
head-protocol/adr/1/: index.html
head-protocol/adr/10/: index.html
head-protocol/adr/11/: index.html
head-protocol/adr/12/: index.html
head-protocol/adr/13/: index.html
head-protocol/adr/14/: index.html
head-protocol/adr/15/: index.html
head-protocol/adr/16/: index.html
head-protocol/adr/17/: index.html
head-protocol/adr/18/: index.html
head-protocol/adr/19/: index.html
head-protocol/adr/2/: index.html
head-protocol/adr/20/: index.html
head-protocol/adr/21/: index.html
head-protocol/adr/22/: index.html
head-protocol/adr/23/: index.html
head-protocol/adr/24/: index.html
head-protocol/adr/3/: index.html
head-protocol/adr/4/: index.html
head-protocol/adr/5/: index.html
head-protocol/adr/6/: index.html
head-protocol/adr/7/: index.html
head-protocol/adr/8/: index.html
head-protocol/adr/9/: index.html
head-protocol/adr/archive/: index.html
head-protocol/adr/tags/: index.html
head-protocol/api-reference/: index.html
head-protocol/assets/js/: 003e5ec0.7aeca1ca.js  028d5559.258b48c9.js  0430c37c.65e48750.js  07f0e1b6.38da42a3.js  081caeca.5521f874.js  0d19dfe3.cbdb97b2.js  0e8f20fe.579cda2c.js  11f4f2b1.5949d81c.js  14c6a722.59efbf51.js  16ee1f7c.8ae06847.js  19e4f689.c627a12a.js  1e0343f6.e5325c93.js  2223b61a.fb77ac7c.js  22b0ed86.bdab59fe.js  27b5b131.bd6dc882.js  28b1fff9.441f6f4b.js  28e41c75.efb39605.js  2ab153f2.8a176b5b.js  2aee1291.467435bc.js  2d950942.3d43f5f8.js  2e6d300b.61691b22.js  2e854b47.f31b4585.js  2f7c2ba1.7e67eaed.js  30320a2d.89911735.js  33c02b6e.86e1c4cb.js  360ea7a6.de7e4cbe.js  383d31c1.91be42e4.js  38b37504.474b3732.js  3b9d3f85.949482e3.js  3d5363aa.e535c47d.js  3fbbfe76.d092bbca.js  40dc809d.b63ac73b.js  45bb717d.2d053518.js  46184bb3.9d30307d.js  4a8184f1.eef517a2.js  4d882e7f.e56f584e.js  4ff02279.4954b3bd.js  514907f8.a8516513.js  525e8ef7.e2829d64.js  54c82979.9606fb42.js  (+71 more)
head-protocol/audit-guidelines/: index.html
head-protocol/benchmarks/: index.html
head-protocol/benchmarks/end-to-end-benchmarks/: index.html
head-protocol/benchmarks/ledger/: index.html
head-protocol/benchmarks/profiling/: index.html
head-protocol/benchmarks/transaction-cost/: index.html
head-protocol/contribute/: index.html
head-protocol/core-concepts/: index.html
head-protocol/core-concepts/architecture/: index.html
head-protocol/core-concepts/behavior/: index.html
head-protocol/core-concepts/faq/: index.html
head-protocol/core-concepts/layer-two/: index.html
head-protocol/core-concepts/rollbacks/: index.html
head-protocol/core-concepts/specification/: index.html
head-protocol/docs/getting-started/: index.html
head-protocol/docs/haskell_packages/: index.html
head-protocol/docs/known-issues/: index.html
head-protocol/docs/tutorial/: index.html
head-protocol/es/: 404.html  index.html  opensearch.xml  sitemap.xml
head-protocol/es/adr/: atom.xml  index.html  rss.xml
head-protocol/es/api-reference/: index.html
head-protocol/es/audit-guidelines/: index.html
head-protocol/es/benchmarks/: index.html
head-protocol/fr/: 404.html  index.html  sitemap.xml
head-protocol/ja/: 404.html  docs-metadata.json  index.html  sitemap.xml
head-protocol/monthly/: atom.xml  index.html  rss.xml
head-protocol/search/: index.html
head-protocol/topologies/: index.html
head-protocol/unstable/: 404.html  index.html  opensearch.xml  sitemap.xml
head-protocol/use-cases/: index.html
hydra-cardano-api/: hydra-cardano-api.cabal
hydra-cluster/: hydra-cluster.cabal
hydra-explorer/: README.md  bundle.js  hydra-explorer.cabal  index.html
hydra-explorer/exe/hydra-explorer/: Main.hs
hydra-explorer/src/Hydra/Chain/Direct/: Explorer.hs  Observer.hs
hydra-explorer/src/Hydra/Chain/Direct/Explorer/: Server.hs
hydra-explorer/src/Hydra/Chain/Direct/Observer/: Tx.hs
hydra-explorer/ui/: package-lock.json  package.json  package.nix
hydra-explorer/ui/public/: index.html
hydra-explorer/ui/src/: App.css  App.js
hydra-node/: hydra-node.cabal
hydra-node/golden/: Event SimpleTx.json  ReasonablySized (ServerOutput (Tx BabbageEra)).json  ReasonablySized (ServerOutput SimpleTx).json
hydra-node/json-schemas/: api.yaml
hydra-observer/: README.md  bundle.js  hydra-observer.cabal  index.html  style.css
hydra-observer/exe/hydra-observer/: Main.hs
hydra-observer/src/Hydra/Chain/Direct/: Observer.hs
hydra-observer/src/Hydra/Chain/Direct/Observer/: Server.hs
hydra-plutus/: hydra-plutus.cabal
hydra-prelude/: hydra-prelude.cabal
hydra-test-utils/: hydra-test-utils.cabal
hydra-tui/: hydra-tui.cabal
hydraw/: bundle.js  hydraw.cabal  index.html  paint.js
nix/hydra/: docker.nix  packages.nix  project.nix  shell.nix
sample-node-config/gcp/: docker-compose.yaml
spec/: hydra-headv1.org  test.md
testnets/: fuel-mainnet.sh
(+2852 files in other folders)
